// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-1pnrn3o-Wrapper e1kblvez0"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="css-5ipae5"
            >
              <div
                className="css-5ipae5"
                is={null}
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title e1kblvez2"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17lswg2-StyledPanel e1laxa7d0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                      is={null}
                    >
                      Active Environments
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className="css-9vq8an-textStyles"
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="css-bq6a85-Wrapper eh488yo0"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any environments yet.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render active renders environment list and sets staging as default env 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-1pnrn3o-Wrapper e1kblvez0"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="css-5ipae5"
            >
              <div
                className="css-5ipae5"
                is={null}
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title e1kblvez2"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17lswg2-StyledPanel e1laxa7d0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                      is={null}
                    >
                      Active Environments
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className="css-9vq8an-textStyles"
            >
              <EnvironmentRow
                environment={
                  Object {
                    "displayName": "All Environments",
                    "id": "__all_environments__",
                    "name": "__all_environments__",
                  }
                }
                isDefault={false}
                isSystemRow={true}
                name="__all_environments__"
                onSetAsDefault={[Function]}
                shouldShowSetDefault={true}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem eo8n7lk0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem eo8n7lk0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              All Environments
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton ezuela50"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <StyledButton
                                aria-label="Set as default"
                                className="css-10adnmx-EnvironmentButton ezuela50"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                size="xsmall"
                              >
                                <Component
                                  aria-label="Set as default"
                                  className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  size="xsmall"
                                >
                                  <button
                                    aria-label="Set as default"
                                    className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ButtonLabel
                                      size="xsmall"
                                    >
                                      <Component
                                        className="css-9vplug-ButtonLabel e17811v31"
                                        size="xsmall"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-9vplug-ButtonLabel e17811v31"
                                          size="xsmall"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-esdzbq-ButtonLabel"
                                            size="xsmall"
                                          >
                                            <div
                                              className="e17811v31 css-esdzbq-ButtonLabel"
                                              is={null}
                                              size="xsmall"
                                            >
                                              Set as default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </button>
                                </Component>
                              </StyledButton>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
              <EnvironmentRow
                actionText="Hide"
                environment={
                  Object {
                    "displayName": "Production",
                    "id": "1",
                    "name": "production",
                    "urlRoutingName": "production",
                  }
                }
                isDefault={false}
                isHidden={false}
                key="1"
                name="production"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={true}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem eo8n7lk0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem eo8n7lk0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              production
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton ezuela50"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <StyledButton
                                aria-label="Set as default"
                                className="css-10adnmx-EnvironmentButton ezuela50"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                size="xsmall"
                              >
                                <Component
                                  aria-label="Set as default"
                                  className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  size="xsmall"
                                >
                                  <button
                                    aria-label="Set as default"
                                    className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ButtonLabel
                                      size="xsmall"
                                    >
                                      <Component
                                        className="css-9vplug-ButtonLabel e17811v31"
                                        size="xsmall"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-9vplug-ButtonLabel e17811v31"
                                          size="xsmall"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-esdzbq-ButtonLabel"
                                            size="xsmall"
                                          >
                                            <div
                                              className="e17811v31 css-esdzbq-ButtonLabel"
                                              is={null}
                                              size="xsmall"
                                            >
                                              Set as default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </button>
                                </Component>
                              </StyledButton>
                            </Button>
                          </EnvironmentButton>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton ezuela50"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <StyledButton
                                aria-label="Hide"
                                className="css-10adnmx-EnvironmentButton ezuela50"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                size="xsmall"
                              >
                                <Component
                                  aria-label="Hide"
                                  className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  size="xsmall"
                                >
                                  <button
                                    aria-label="Hide"
                                    className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ButtonLabel
                                      size="xsmall"
                                    >
                                      <Component
                                        className="css-9vplug-ButtonLabel e17811v31"
                                        size="xsmall"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-9vplug-ButtonLabel e17811v31"
                                          size="xsmall"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-esdzbq-ButtonLabel"
                                            size="xsmall"
                                          >
                                            <div
                                              className="e17811v31 css-esdzbq-ButtonLabel"
                                              is={null}
                                              size="xsmall"
                                            >
                                              Hide
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </button>
                                </Component>
                              </StyledButton>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
              <EnvironmentRow
                actionText="Hide"
                environment={
                  Object {
                    "displayName": "Staging",
                    "id": "2",
                    "name": "staging",
                    "urlRoutingName": "staging",
                  }
                }
                isDefault={true}
                isHidden={false}
                key="2"
                name="staging"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={false}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem eo8n7lk0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem eo8n7lk0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              staging
                              <Tag
                                priority="success"
                              >
                                <TagTextStyled
                                  priority="success"
                                >
                                  <span
                                    className="css-giy4xh-TagTextStyled e6q9yfr0"
                                  >
                                    Default
                                  </span>
                                </TagTextStyled>
                              </Tag>
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton ezuela50"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <StyledButton
                                aria-label="Hide"
                                className="css-10adnmx-EnvironmentButton ezuela50"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                size="xsmall"
                              >
                                <Component
                                  aria-label="Hide"
                                  className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  size="xsmall"
                                >
                                  <button
                                    aria-label="Hide"
                                    className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ButtonLabel
                                      size="xsmall"
                                    >
                                      <Component
                                        className="css-9vplug-ButtonLabel e17811v31"
                                        size="xsmall"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-9vplug-ButtonLabel e17811v31"
                                          size="xsmall"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-esdzbq-ButtonLabel"
                                            size="xsmall"
                                          >
                                            <div
                                              className="e17811v31 css-esdzbq-ButtonLabel"
                                              is={null}
                                              size="xsmall"
                                            >
                                              Hide
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </button>
                                </Component>
                              </StyledButton>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-1pnrn3o-Wrapper e1kblvez0"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="css-5ipae5"
            >
              <div
                className="css-5ipae5"
                is={null}
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title e1kblvez2"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17lswg2-StyledPanel e1laxa7d0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                      is={null}
                    >
                      Hidden
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className="css-9vq8an-textStyles"
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="css-bq6a85-Wrapper eh488yo0"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any hidden environments.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-1pnrn3o-Wrapper e1kblvez0"
        >
          <Flex
            align="center"
          >
            <Base
              align="center"
              className="css-5ipae5"
            >
              <div
                className="css-5ipae5"
                is={null}
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title e1kblvez2"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </Base>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17lswg2-StyledPanel e1laxa7d0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                      is={null}
                    >
                      Hidden
                    </div>
                  </Base>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className="css-9vq8an-textStyles"
            >
              <EnvironmentRow
                actionText="Show"
                environment={
                  Object {
                    "displayName": "Zzz",
                    "id": "1",
                    "name": "zzz",
                    "urlRoutingName": "zzz",
                  }
                }
                isDefault={false}
                isHidden={true}
                key="1"
                name="zzz"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={false}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-qcergp-StyledPanelItem eo8n7lk0"
                      justify="space-between"
                      p={2}
                    >
                      <div
                        className="css-qcergp-StyledPanelItem eo8n7lk0"
                        is={null}
                      >
                        <Flex
                          align="center"
                        >
                          <Base
                            align="center"
                            className="css-5ipae5"
                          >
                            <div
                              className="css-5ipae5"
                              is={null}
                            >
                              zzz
                            </div>
                          </Base>
                        </Flex>
                        <div>
                          <EnvironmentButton
                            onClick={[Function]}
                            size="xsmall"
                          >
                            <Button
                              className="css-10adnmx-EnvironmentButton ezuela50"
                              disabled={false}
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <StyledButton
                                aria-label="Show"
                                className="css-10adnmx-EnvironmentButton ezuela50"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                size="xsmall"
                              >
                                <Component
                                  aria-label="Show"
                                  className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  size="xsmall"
                                >
                                  <button
                                    aria-label="Show"
                                    className="ezuela50 css-fp1reu-StyledButton-getColors-EnvironmentButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                  >
                                    <ButtonLabel
                                      size="xsmall"
                                    >
                                      <Component
                                        className="css-9vplug-ButtonLabel e17811v31"
                                        size="xsmall"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-9vplug-ButtonLabel e17811v31"
                                          size="xsmall"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-esdzbq-ButtonLabel"
                                            size="xsmall"
                                          >
                                            <div
                                              className="e17811v31 css-esdzbq-ButtonLabel"
                                              is={null}
                                              size="xsmall"
                                            >
                                              Show
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </button>
                                </Component>
                              </StyledButton>
                            </Button>
                          </EnvironmentButton>
                        </div>
                      </div>
                    </Base>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;
